--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,6 +20,9 @@ services:
       - HOSTNAME_HOST=local
       - PROJECT_ID=plone
       - CUSTOM_TMP=/var/tmp
+      - OO_SERVER=libreoffice
+      - OO_PORT=2002
+      - USE_STREAM=False
   instance:
     image: imiobe/iadelib:latest
     ports:
@@ -34,6 +37,8 @@ services:
       - PROJECT_ID=plone
       - CUSTOM_TMP=/var/tmp
       - OO_SERVER=libreoffice
+      - OO_PORT=2002
+      - USE_STREAM=False
     volumes:
       - tmp:/var/tmp
 
