Added depends_on in compose files

--- a/docker/docker-compose-jenkins.yml
+++ b/docker/docker-compose-jenkins.yml
@@ -13,6 +13,8 @@ services:
 
   instance:
     image: imiobe/iadelib:test
+    depends_on:
+      - libreoffice
     networks:
       - libreoffice
     environment:
