--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -30,6 +30,9 @@ services:
     networks:
       - zeo
       - libreoffice
+    depends_on:
+      - zeo
+      - libreoffice
     environment:
       - HTTP_PORT=8081
       - ZEO_ADDRESS=zeo:8100
