Do not use source for collective.contact.plonegroup for now as it broken because of new key in functions "fct_management"

--- a/dev.cfg
+++ b/dev.cfg
@@ -25,7 +25,8 @@ auto-checkout =
 #    collective.ckeditor
     collective.compoundcriterion
     collective.contact.core
-    collective.contact.plonegroup
+# comment for now until we adapt config.MEETING_GROUP_SUFFIXES for fct_management
+#    collective.contact.plonegroup
     collective.documentgenerator
     collective.dms.scanbehavior
     collective.eeafaceted.batchactions
