Do not use collective.contact.plonegroup source, no more compatible with PM 4.1.x

--- a/dev.cfg
+++ b/dev.cfg
@@ -25,7 +25,7 @@ auto-checkout =
 #    collective.ckeditor
     collective.compoundcriterion
     collective.contact.core
-    collective.contact.plonegroup
+#    collective.contact.plonegroup
     collective.documentgenerator
     collective.dms.scanbehavior
     collective.eeafaceted.batchactions
