--- a/docker/Dockerfile-dev
+++ b/docker/Dockerfile-dev
@@ -46,6 +46,10 @@ USER imio
 RUN echo "[buildout]" > buildout.cfg \
   && echo "extends =" >> buildout.cfg \
   && echo "    $PROFILE" >> buildout.cfg \
+  && echo "    restapi.cfg" >> buildout.cfg \
+  && echo "    solr.cfg" >> buildout.cfg \
+  && echo "    amqp.cfg" >> buildout.cfg \
+  && echo "    ldap.cfg" >> buildout.cfg \
   && echo "    docker.cfg" >> buildout.cfg \
   && cat buildout.cfg \
   && touch /data/filestorage/Data.fs \
