fix missing solr dependancies

--- a/docker/Dockerfile-dev
+++ b/docker/Dockerfile-dev
@@ -40,18 +40,18 @@ RUN apt-get update -qqy \
   && rm -rf /var/lib/apt/lists/*
 
 COPY --chown=imio *.cfg *.conf Makefile /plone/
+COPY --chown=imio config /plone/config
 
 USER imio
 
 RUN echo "[buildout]" > buildout.cfg \
   && echo "extends =" >> buildout.cfg \
   && echo "    $PROFILE" >> buildout.cfg \
-  && echo "    restapi.cfg" >> buildout.cfg \
-  && echo "    solr.cfg" >> buildout.cfg \
   && echo "    amqp.cfg" >> buildout.cfg \
+  && echo "    solr.cfg" >> buildout.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
+  && echo "    restapi.cfg" >> buildout.cfg \
   && echo "    docker.cfg" >> buildout.cfg \
-  && cat buildout.cfg \
   && touch /data/filestorage/Data.fs \
   && pip install pip==$PIP setuptools==$SETUPTOOLS zc.buildout==$ZC_BUILDOUT \
   && buildout -t 30 -N
