--- a/docker/Dockerfile-dev
+++ b/docker/Dockerfile-dev
@@ -11,14 +11,12 @@ WORKDIR /plone
 
 RUN apt-get update -qqy \
   && apt-get full-upgrade -qqy \
+  && devDeps="git subversion" \
   && buildDeps="build-essential \
-                git \
-                subversion \
                 cmake \
                 make \
                 wget \
-                python2.7-dev \
-                virtualenv \
+                python-pip \
                 libpq-dev \
                 libreadline-dev \
                 gcc \
@@ -35,12 +33,13 @@ RUN apt-get update -qqy \
                 libldap2-dev \
                 libwebp-dev \
                 libsasl2-dev \
+                libldap2-dev \
+                python-ldap-dbg \
                 libsigc++-2.0-dev" \
-  && apt-get install -qqy --no-install-recommends $buildDeps \
+  && apt-get install -qqy --no-install-recommends $devDeps $buildDeps \
   && rm -rf /var/lib/apt/lists/*
 
 COPY --chown=imio *.cfg *.conf Makefile /plone/
-COPY --chown=imio config /plone/config
 
 USER imio
 
@@ -48,7 +47,6 @@ RUN echo "[buildout]" > buildout.cfg \
   && echo "extends =" >> buildout.cfg \
   && echo "    $PROFILE" >> buildout.cfg \
   && echo "    amqp.cfg" >> buildout.cfg \
-  && echo "    solr.cfg" >> buildout.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
   && echo "    restapi.cfg" >> buildout.cfg \
   && echo "    docker.cfg" >> buildout.cfg \
