--- a/docker/Dockerfile-test
+++ b/docker/Dockerfile-test
@@ -10,7 +10,6 @@ USER root
 WORKDIR /plone
 
 COPY --chown=imio *.cfg *.conf Makefile /plone/
-COPY --chown=imio config /plone/config
 
 USER imio
 
@@ -18,9 +17,10 @@ RUN echo "[buildout]" > buildout.cfg \
   && echo "extends =" >> buildout.cfg \
   && echo "    $PROFILE" >> buildout.cfg \
   && echo "    amqp.cfg" >> buildout.cfg \
-  && echo "    solr.cfg" >> buildout.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
   && echo "    restapi.cfg" >> buildout.cfg \
   && echo "    docker.cfg" >> buildout.cfg \
+  && echo "Bouildout config :" \
+  && cat buildout.cfg \
   && pip install pip==$PIP setuptools==$SETUPTOOLS zc.buildout==$ZC_BUILDOUT \
   && buildout -t 30 -N
