Re-enable checkout of collective.contact.plonegroup as Products.PloneMeeting code was adapted

--- a/dev.cfg
+++ b/dev.cfg
@@ -25,8 +25,7 @@ auto-checkout =
 #    collective.ckeditor
     collective.compoundcriterion
     collective.contact.core
-# comment for now until we adapt config.MEETING_GROUP_SUFFIXES for fct_management
-#    collective.contact.plonegroup
+    collective.contact.plonegroup
     collective.documentgenerator
     collective.dms.scanbehavior
     collective.eeafaceted.batchactions
