Make own bin/testrestapi command to not include plonemeeting.restapi tests in bin/test to avoid test isolation problems

--- a/restapi.cfg
+++ b/restapi.cfg
@@ -1,12 +1,19 @@
+[buildout]
+parts +=
+    testrestapi
+
 [instance1]
 eggs +=
     plonemeeting.restapi
 zcml +=
     plonemeeting.restapi
 
-[test]
-eggs +=
+[testrestapi]
+recipe = zc.recipe.testrunner
+defaults = ['--auto-color', '--auto-progress', '-s', 'plonemeeting.restapi']
+eggs =
     plonemeeting.restapi[test]
+environment = testenv
 
 [versions]
 imio.restapi = 1.0a11
