--- a/docker/docker-compose-jenkins.yml
+++ b/docker/docker-compose-jenkins.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: '2'
 services:
   libreoffice:
     image: imiobe/libreoffice:6.1
@@ -10,12 +10,8 @@ services:
       - vartmp:/var/tmp
     networks:
       - libreoffice
-    deploy:
-      resources:
-        limits:
-          memory: 200M
-        reservations:
-          memory: 200M
+    mem_limit: 200M
+    mem_reservation: 200M
 
   instance:
     image: imiobe/iadelib:dev
@@ -36,12 +32,8 @@ services:
     volumes:
       - tmp:/tmp
       - vartmp:/var/tmp
-    deploy:
-      resources:
-        limits:
-          memory: 1224M
-        reservations:
-          memory: 1124M
+    mem_limit: 1224M
+    mem_reservation: 1124M
 
 volumes:
   tmp:
