Moved testrestapi to dev.cfg, restapi.cfg only handle restapi for prod

--- a/dev.cfg
+++ b/dev.cfg
@@ -2,10 +2,12 @@
 extends =
     base.cfg
     amqp.cfg
+    restapi.cfg
     versions-dev.cfg
 
 parts +=
     test
+    testrestapi
     coverage
     report
     robot
@@ -77,7 +79,12 @@ eggs +=
 zcml +=
     iw.debug
 
-# create bin/test command
+[testenv]
+zope_i18n_compile_mo_files = true
+ENV = dev
+OO_PORT = ${port:oo-port}
+PYTHON_UNO = ${port:python-uno}
+
 [test]
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress']
@@ -87,18 +94,17 @@ eggs =
     Products.PloneMeeting[test]
 environment = testenv
 
-[testenv]
-zope_i18n_compile_mo_files = true
-ENV = dev
-OO_PORT = ${port:oo-port}
-PYTHON_UNO = ${port:python-uno}
+[testrestapi]
+recipe = zc.recipe.testrunner
+defaults = ['--auto-color', '--auto-progress', '-s', 'plonemeeting.restapi']
+eggs =
+    plonemeeting.restapi[test]
+environment = testenv
 
-# create bin/coverage commant
 [coverage]
 recipe = zc.recipe.egg
 eggs = coverage
 
-# create bin/report command
 [report]
 recipe = zc.recipe.egg
 eggs = coverage
