plonemeeting.restapi is now a direct dependency of Products.PloneMeeting, it is available in buildout by default

--- a/versions-dev.cfg
+++ b/versions-dev.cfg
@@ -32,3 +32,7 @@ collective.profiler = 0.3
 ecreall.helpers.testing = 1.7
 
 testfixtures = 6.10.3
+
+# restapi tests
+plone.tiles = 2.2.1
+collective.MockMailHost = 2.0.0
