--- a/versions.cfg
+++ b/versions.cfg
@@ -237,3 +237,21 @@ chardet = 3.0.4
 
 functools32 = 3.2.3.post2
 configparser = 3.7.4
+
+# plonemeeting.restapi
+imio.restapi = 1.0a11
+plonemeeting.restapi = 1.0a3
+
+plone.restapi = 6.13.8
+PyJWT = 1.7.1
+plone.schema = 1.2.1
+plone.rest = 1.6.1
+jsonschema = 3.2.0
+pyrsistent = 0.16.0
+importlib-metadata = 1.6.1
+attrs = 19.3.0
+zipp = 0.6.0
+pathlib2 = 2.3.5
+contextlib2 = 0.6.0.post1
+more-itertools = 5.0.0
+scandir = 1.10.0
