fix libreoffice hostname

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,8 @@
 [buildout]
 
 extends =
-    communes.cfg
-#    communes-dev.cfg
+#    communes.cfg
+    communes-dev.cfg
 #    bep.cfg
 #    bep-dev.cfg
 #    charleroi.cfg
@@ -24,6 +24,6 @@ extends =
 #    seraing.cfg
 #    seraing-dev.cfg
 #
-#    amqp.cfg
-#    solr.cfg
-#    ldap.cfg
+    amqp.cfg
+    solr.cfg
+    ldap.cfg
