--- a/docker/docker-compose-jenkins.yml
+++ b/docker/docker-compose-jenkins.yml
@@ -1,8 +1,8 @@
-version: '2'
+version: '3.4'
 services:
   loffice:
     image: imiobe/libreoffice:6.1
-    command: soffice --headless --nodefault --accept="socket,host=libreoffice,port=2002,tcpNoDelay=1;urp;StarOffice.ServiceManager"
+    command: soffice --headless --nodefault --accept="socket,host=loffice,port=2002,tcpNoDelay=1;urp;StarOffice.ServiceManager"
     expose:
       - "2002"
     volumes:
@@ -10,12 +10,12 @@ services:
       - vartmp:/var/tmp
     networks:
       - loffice
-    mem_limit: 200M
-    mem_reservation: 200M
+#    mem_limit: 200M
+#    mem_reservation: 200M
 
   instance:
     image: imiobe/iadelib:dev
-    command: bin/testmc
+    command: sleep infinity
     depends_on:
       - loffice
     networks:
@@ -32,8 +32,8 @@ services:
     volumes:
       - tmp:/tmp
       - vartmp:/var/tmp
-    mem_limit: 1224M
-    mem_reservation: 1124M
+#    mem_limit: 1224M
+#    mem_reservation: 1124M
 
 volumes:
   tmp:
@@ -41,3 +41,4 @@ volumes:
 
 networks:
   loffice:
+    internal: true
