allow instance to communicate with internet

--- a/docker/docker-compose-jenkins.yml
+++ b/docker/docker-compose-jenkins.yml
@@ -19,6 +19,7 @@ services:
     depends_on:
       - loffice
     networks:
+      - default
       - loffice
     environment:
       - HTTP_PORT=8081
