Use PloneMeeting branch MPMPHAI-21_waiting_advices_wfa for dev for noxw

--- a/hainaut-prov-dev.cfg
+++ b/hainaut-prov-dev.cfg
@@ -22,6 +22,7 @@ zcml +=
 
 [sources]
 Products.MeetingPROVHainaut = git ${remotes:imio}/Products.MeetingPROVHainaut.git pushurl=${remotes:imio_push}/Products.MeetingPROVHainaut.git
+Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=MPMPHAI-21_waiting_advices_wfa
 
 [testmc]
 recipe = zc.recipe.testrunner
