Do not use sources for collective.contact.core for branch 4.1.x

--- a/dev.cfg
+++ b/dev.cfg
@@ -24,7 +24,7 @@ auto-checkout =
     collective.behavior.talcondition
 #    collective.ckeditor
     collective.compoundcriterion
-    collective.contact.core
+#    collective.contact.core
 #    collective.contact.plonegroup
     collective.documentgenerator
     collective.dms.scanbehavior
