Configure profile.dat to activate when necessary

--- a/dev.cfg
+++ b/dev.cfg
@@ -66,6 +66,10 @@ verbose-security = on
 environment-vars +=
     ENABLE_PRINTING_MAILHOST True
     ENV dev
+#    PROFILE_PUBLISHER 1
+
+zope-conf-additional +=
+#    publisher-profile-file ${buildout:directory}/profile.dat
 
 eggs +=
     Products.PrintingMailHost
