Use 4.1.x branch in mons-dev.cfg

--- a/mons-dev.cfg
+++ b/mons-dev.cfg
@@ -21,7 +21,7 @@ zcml +=
 
 [sources]
 Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=4.1.x
-Products.MeetingMons = git ${remotes:imio}/Products.MeetingMons.git pushurl=${remotes:imio_push}/Products.MeetingMons.git branch=meetingmons41_PM-2945
+Products.MeetingMons = git ${remotes:imio}/Products.MeetingMons.git pushurl=${remotes:imio_push}/Products.MeetingMons.git branch=4.1.x
 
 [testmons]
 recipe = zc.recipe.testrunner
