iUse collective.MockMailHost = 2.0.0 in dev

--- a/versions-dev.cfg
+++ b/versions-dev.cfg
@@ -28,7 +28,7 @@ robotframework-selenium2screenshots = 0.7.2
 robotsuite = 2.0.0
 selenium = 3.3.0
 
+collective.MockMailHost = 2.0.0
 collective.profiler = 0.3
 ecreall.helpers.testing = 1.7
-
 testfixtures = 6.10.3
