--- a/dev.cfg
+++ b/dev.cfg
@@ -124,3 +124,4 @@ pre-commit-hook = True
 directory =
         ${buildout:directory}/src/Products.PloneMeeting/src
 flake8-ignore = E123,E124,E501,E126,E127,E128,W391,C901
+flake8-max-line-length = 119
