--- a/docker/Dockerfile-test
+++ b/docker/Dockerfile-test
@@ -5,6 +5,8 @@ ENV ZC_BUILDOUT=2.13.1 \
     PIP=20.2.2
 
 ARG PROFILE="communes-dev.cfg"
+ARG PR_NUM
+ARG PR_REPO
 
 USER root
 WORKDIR /plone
@@ -22,4 +24,12 @@ RUN echo "[buildout]" > buildout.cfg \
   && echo "Bouildout config :" \
   && cat buildout.cfg \
   && pip install pip==$PIP setuptools==$SETUPTOOLS zc.buildout==$ZC_BUILDOUT \
-  && buildout -t 60
+  && buildout -t 60 \
+  && if [ -z $PR_NUM ] && [ -z $PR_REPO ] ; \
+     then echo "Argument PR_NUM not provided" ; \
+     else cd src/$PR_REPO \
+          && git fetch origin pull/$PR_NUM/head:PR-$PR_NUM \
+          && git checkout PR-$PR_NUM; \
+     fi
+
+WORKDIR /plone
